# stdash

./: Dockerfile  Untitled.ipynb  pyproject.toml  requirements.txt
src/stdash/: app.py
src/stdash/pages/: Model_accuracy.py  Model_statistics.py
